cmake_minimum_required(VERSION 2.6)
project(pclSegLeaf)
find_package(PCL 1.10 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS}) 
LINK_LIBRARIES("/usr/local/lib/liblas.so.2.4.0")
add_executable(pclSegLeaf pclSegLeaf.cpp)
target_link_libraries (pclSegLeaf ${PCL_LIBRARIES})
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpcl_common.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpcl_visualization.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpcl_io.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpcl_search.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpcl_kdtree.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpcl_surface.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libboost_thread.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpthread.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpcl_features.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpcl_filters.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpcl_segmentation.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libpcl_sample_consensus.so)
target_link_libraries (pclSegLeaf /lib/aarch64-linux-gnu/libvtkFiltersModeling-7.1.so)
install(TARGETS pclSegLeaf RUNTIME DESTINATION bin)
